fix bug on mobile

--- a/the-band-w3school/assets/css/base.css
+++ b/the-band-w3school/assets/css/base.css
@@ -67,6 +67,8 @@
     margin-top: 16px;
     cursor: pointer;
     border: none;
+    appearance: none;
+    -webkit-appearance: none;
 }
 
 .btn:hover {
