--- a/the-band-w3school/assets/css/main.css
+++ b/the-band-w3school/assets/css/main.css
@@ -115,7 +115,7 @@ body {
 .slider {
     margin-top: 46px;
     padding-top: 50%;
-    background: url("/assets/img/slider1.jpg") top center / cover no-repeat;
+    background: url("../img/slider1.jpg") top center / cover no-repeat;
     position: relative;
 }
 
@@ -135,6 +135,7 @@ body {
 .slider .text-description {
     font-size: 15px;
     margin-top: 25px;
+    text-shadow: 0 0 1px #000;
 }
 
 /* Content */
