--- a/the-band-w3school/assets/css/responsive.css
+++ b/the-band-w3school/assets/css/responsive.css
@@ -1,5 +1,6 @@
 /* Tablet & Mobile */
-@media (max-width: 1023px) {
+/* max-width: 1023px */
+@media (max-width: 63.9375em) {
     .nav .subnav__link {
         padding: 5px 12px;
     }
@@ -10,10 +11,15 @@
 
     .contact-form .form-control {
         padding: 15px;
+        font-size: 16px;
     }
 
     .content-info {
         line-height: 2;
+    }
+
+    .content-submit-btn {
+        font-size: 16px;
     }
 
     .socials-list {
@@ -30,13 +36,9 @@
     }
 }
 
-/* Tablet */
-@media (min-width: 740px ) and (max-width: 1023px ){
-    
-}
-
 /* Mobile */
-@media (max-width: 740px) {
+/* max-width: 739px */
+@media (max-width: 46.1875em) {
     .s-full-width,
     .s-col-full {
         width: 100% !important;
